# course_work_1

./: README.md  main.py  pyproject.toml  requirements.txt
data/: user_settings.json
htmlcov/: index.html
src/: .env.example  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_utils.py
