[project]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustam Gabdelislamov",email = "rustamgabdelislamov911@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (==8.3.5)",
    "black (==25.1.0)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.0)",
    "colorama (==0.4.6)",
    "coverage (==7.8.0)",
    "et-xmlfile (==2.0.0)",
    "flake8 (==7.2.0)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "isort (==6.0.1)",
    "mccabe (==0.7.0)",
    "mypy (==1.15.0)",
    "mypy-extensions (==1.1.0)",
    "numpy (==2.2.6)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "pycodestyle (==2.13.0)",
    "pyflakes (==3.3.2)",
    "pytest-cov (==6.1.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.0)",
    "pytz (==2025.2)",
    "requests (==2.32.3)",
    "six (==1.17.0)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
